# RobustBid

./: .gitignore  COMPLETE_REPORT.md  FINAL_REPORT.md  LINTING_REPORT.md  MYPY_ОТЧЕТ.md  README.md  pyproject.toml  requirements.txt  ИТОГОВЫЙ_ОТЧЕТ.md  ФИНАЛЬНЫЙ_ОТЧЕТ.md  ФИНАЛЬНЫЙ_ОТЧЕТ_ВСЕ_ИСПРАВЛЕНО.md  ФИНАЛЬНЫЙ_ОТЧЕТ_ПОСЛЕ_ДОФИКСА.md
BAT/example_notebooks/: df_metrics_risky.csv  df_metrics_risky_10.csv  df_metrics_risky_2.csv  df_metrics_risky_50.csv  robust_bidder_exps_CE.ipynb  robust_bidder_exps_MAE.ipynb  robust_bidder_exps_MSE.ipynb  robust_bidder_exps_MSE_2.ipynb  robust_bidder_exps_MSE_ctr.ipynb  robust_bidder_exps_MSE_ctrcvr.ipynb  robust_bidder_exps_MSE_risk.ipynb
BAT/simulator/model/: risk_bid.py  risk_bid_simple.py  robust_ce.py  robust_mae.py  robust_mse.py  robust_mse_2.py  robust_mse_ctr.py  robust_mse_ctrcvr.py  simple.py
BAT/simulator/simulation/: modules.py  simulate.py  utils.py  utils_visualization.py
BAT/simulator/validation/: check_results.py  metrics.py
Synthetic_and_IPinYou/: Experiment_ipinyou_ce.ipynb  Experiment_ipinyou_mae.ipynb  Experiment_ipinyou_mse.ipynb  Experiment_ipinyou_mse_CTR_CVR.ipynb  Experiment_synthetic_ce.ipynb  Experiment_synthetic_mae.ipynb  Experiment_synthetic_mse.ipynb  Experiment_synthetic_mse_CTR_CVR.ipynb
Synthetic_and_IPinYou/BidderModel/: Bid.py  IPinYou.py  Vizualization_ipinyou.py
Synthetic_and_IPinYou/Utils/: LP.py  NoiseCTR.py  Vizualization.py
plots/: figure_2.ipynb  vizualization.py
results08_10_2025_CTRVIS/: Results_ipinyou_non-robust_mse_CTR_CVR.csv  Results_ipinyou_robust_mse_CTR_CVR.csv  Results_synthetic_non-robust_mse_CTR_CVR.csv  Results_synthetic_robust_mse_CTR_CVR.csv  metrics_mse_BAT_CTR_CVR.csv
